--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ dados/dados/__pycache__/items.cpython-36.pyc
 dados/dados/__pycache__/settings.cpython-36.pyc
 dados/dados/spiders/__pycache__/Tecnoblog.cpython-36.pyc
 dados/dados/spiders/__pycache__/__init__.cpython-36.pyc
+dados/.vscode/settings.json
